@@ -1,3 +1,8 @@
+2001-12-04 12:22  mallum
+
+	* ChangeLog, jabber.py, examples/pygtkjab.py: small fixes to X
+	functionality. Yet more pygtkjab improvements
+
 2001-11-20 00:15  mallum
 
 	* jabber.py: component improvements
